@@ -4,7 +4,7 @@
 /// Initialization calls for library
 ///
 /// \copyright
-/// Copyright (c) 2013-2014 Josh Blum
+/// Copyright (c) 2013-2015 Josh Blum
 /// SPDX-License-Identifier: BSL-1.0
 ///
 
@@ -23,5 +23,25 @@ namespace Pothos {
      * Subsequent calls to init() are safe and result in NOP.
      */
     POTHOS_API void init(void);
+
+    /*!
+     * Perform cleanup routines before application exit.
+     * The deinit() call unloads plugin modules loaded by init()
+     * Match any calls to init() with to deinit() before application exit.
+     */
+    POTHOS_API void deinit(void);
+
+    /*!
+     * Scoped initializer with automatic cleanup.
+     */
+    class POTHOS_API ScopedInit
+    {
+    public:
+        //! Call init() on object construction.
+        ScopedInit(void);
+
+        //! Call deinit() when going out of scope.
+        ~ScopedInit(void);
+    };
 
 } //namespace Pothos
