@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.3.0 (pending)
 ==========================
 
+- Applications can cleanup before exit with deinit()
 - Detection logic in input port for queue overflows
 - Added network utils for IPv6 with fall-back support
 - Improved error reporting and formatting for self tests
